# pyqt-addressbook

./: README.md  pyproject.toml  sample_contacts.yaml
src/addressbook/: addressbook.py  constants.py  controller.py
src/addressbook/models/: contact.py  contact_list.py
src/addressbook/ui/: edit_contact_window.ui  main_window.ui
src/addressbook/views/: __init__.py  editcontact.py  mainwindow.py
